@@ -241,9 +241,6 @@ $dropdown-link-color-hover: $link-hover-color !default;
     top: 0;
     margin-right: 5px;
   }
-  > .currentFolderItem {
-    padding: 10px;
-  }
   > li.ui-menu-item {
     display: inline-block;
     > a {
