@@ -4,6 +4,9 @@ Changelog
 2.0.0 (unreleased)
 ------------------
 
+- Make `only in current folder section` selectable in the dropdown menu.
+  [Kevin Bieri]
+
 - Adjust stylings for the new ftw.theming.
   [elioschmutz]
 
